--- a/app/src/main/res/layout/fragment_today.xml
+++ b/app/src/main/res/layout/fragment_today.xml
@@ -19,7 +19,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
         android:orientation="vertical">
 
 
@@ -32,6 +34,7 @@
 
 
         <TextView
+            android:id="@+id/sunEvent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -56,6 +59,7 @@
                 android:textSize="20sp" />
 
             <TextView
+                android:id="@+id/gpsToCity"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -80,6 +84,7 @@
                 android:textSize="20sp" />
 
             <TextView
+                android:id="@+id/lastUpdate"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -95,8 +100,6 @@
             android:orientation="horizontal">
 
 
-            Su
-
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -106,6 +109,7 @@
                 android:textSize="20sp" />
 
             <TextView
+                android:id="@+id/sunrise"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -130,6 +134,7 @@
                 android:textSize="20sp" />
 
             <TextView
+                android:id="@+id/sunset"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
