--- a/app/src/main/res/layout/fragment_tomorrow.xml
+++ b/app/src/main/res/layout/fragment_tomorrow.xml
@@ -19,26 +19,31 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
         android:orientation="vertical">
 
 
         <TextView
+            android:id="@+id/nextEventText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-light"
-            android:text="Next Sunrise"
+            android:text="Next Sunset"
             android:textSize="20sp" />
 
 
         <TextView
+            android:id="@+id/sunEvent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:fontFamily="sans-serif-medium"
             android:paddingBottom="16dp"
-            android:text="-16:09"
-            android:textSize="44sp" />
+            android:text="-06:23"
+            android:textSize="72sp" />
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -55,6 +60,7 @@
                 android:textSize="20sp" />
 
             <TextView
+                android:id="@+id/gpsToCity"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -79,6 +85,7 @@
                 android:textSize="20sp" />
 
             <TextView
+                android:id="@+id/lastUpdate"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -94,8 +101,6 @@
             android:orientation="horizontal">
 
 
-            Su
-
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -105,6 +110,7 @@
                 android:textSize="20sp" />
 
             <TextView
+                android:id="@+id/sunrise"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -129,6 +135,7 @@
                 android:textSize="20sp" />
 
             <TextView
+                android:id="@+id/sunset"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -137,7 +144,7 @@
                 android:textSize="20sp" />
 
         </LinearLayout>
-
     </LinearLayout>
+
 
 </RelativeLayout>
